--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,8 @@
-
+<img src="https://i.imgur.com/9r1y0ZM.jpg" alt="Profile picture" class="profile">
+<div class="container">
+  <a href="https://www.facebook.com/yourusername" class="button"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://www.facebook.com/yourusername" class="button"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://www.instagram.com/yourusername" class="button"><i class="fab fa-instagram"></i></a>
+  <a href="https://wa.me/yourphonenumber" class="button"><i class="fab fa-whatsapp"></i></a>
+  <a href="https://t.me/yourusername" class="button"><i class="fab fa-telegram-plane"></i></a>
+</div>
