--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         body {
-            background-image: url("blue_galaxy_background.jpg");
+            background-image: url("https://i.pinimg.com/originals/35/44/d0/3544d0bec6f4bc046f26640e4c6f3841.gif");
             background-size: cover;
             text-align: center;
         }
